homework8/manifest/billing-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing
  labels:
    app: order-microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-microservice-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: order-microservice-app
        service: billing
    spec:
      containers:
        - name: billing
          image: alyanovao/billingservice:1.0.1
          ports:
            - containerPort: 8804
          imagePullPolicy: Always
