homework8/manifest/delivery-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery
  labels:
    app: order-microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-microservice-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: order-microservice-app
        service: delivery
    spec:
      containers:
        - name: delivery
          image: alyanovao/deliveryservice:1.0.1
          ports:
            - containerPort: 8802
          imagePullPolicy: Always
