homework8/manifest/notification-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  labels:
    app: order-microservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-microservice-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: order-microservice-app
        service: notification
    spec:
      containers:
        - name: notification
          image: alyanovao/notificationservice:1.0.1
          ports:
            - containerPort: 8803
          imagePullPolicy: Always
