homework8/manifest/billing-service.yml
apiVersion: v1
kind: Service
metadata:
  name: billing
  labels:
    app: order-microservice-app
spec:
  type: ClusterIP
  selector:
    service: billing
  ports:
    - port: 8804
      name: web
      protocol: TCP
      targetPort: 8804
